--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@
     border-radius: 8px;
     border:1px #9aa5b1;
 }
+.result-para{
+    font-weight: 600;
+    font-size: 25px;
+}
 .btn{
     background-color: #690cb0;
     border-width: 0px;
